--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>بطاقتي التعريفية</title>
+    <link rel="stylesheet" href="./styles.css">
     <!--  قم بربط هذه الصفحة  مع css -->
     <!--  ربط google fonts -->
   </head>
@@ -11,7 +12,7 @@
   <body>
     <nav>
       <div class="nav-elements">
-        <a href="#">هويّتي</a>
+          <a href="#">هويّتي</a>
         <a href="#">هواياتي</a>
       </div>
     </nav>
@@ -25,21 +26,29 @@
       <img src="./img/kid.png" alt="person" />
 
       <!-------------------(البيانات)------------------>
-      <h1>اسمك</h1>
+      <h1>هيا على</h1>
       <h4>هواياتي المفضلة</h4>
 
-      <ul>
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
+      <ul style="list-style-type:none;">
+        <b>
+        <li>القراءة</li>
+        <li>الكتابة</li>
+        <li>مشاهدة المسلسلات والافلام</li>
+      </b>
       </ul>
 
-      <a href="https://code.kw/">
+      <a target="_blank" href="https://code.kw/">
         <h3>تصفح موقع الكويت تبرمج</h3>
       </a>
     </div>
     <!-------------------(الهوايات)------------------>
     <!-- قم بإضافة صور هواياتك هنا -->
-    <div class="hobbies"></div>
+    <div class="hobbies ">
+      <img  src="./img/Netflix-monthly.jpg" alt="">
+
+      <img src="./img/images.jpg" alt="">
+      <img src="./img/0930_writing-1000x664.jpg" alt="">
+
+    </div>
   </body>
 </html>
